Update .project - corrige nome

--- a/.project
+++ b/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>AP1-Iarley</name>
+	<name>AP3-Iarley-Enzo</name>
 	<comment></comment>
 	<projects>
 	</projects>
